Fix scrollbar hidden behind svg

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,9 @@ body,
   height: 100%;
   width: 100%;
 }
+body {
+  background-color: #232323;
+}
 
 .row {
   margin-left: 0 !important;
