--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,16 +1,7 @@
-.home {
-  width: 100%;
-  height: 100%;
-  background-size: cover;
-  background-color: #232323;
-  overflow: auto;
-}
-
 .home_body {
   display: flex;
   flex-direction: column;
   position: relative;
-  z-index: 1;
 }
 .card {
   display: flex;
